--- a/VetchinovaTeplyakova/Pages/Auth.cshtml
+++ b/VetchinovaTeplyakova/Pages/Auth.cshtml
@@ -15,7 +15,7 @@
         <label class="form-label" for="form2Example2">Password</label>
     </div>
     <!-- Submit button -->
-    <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
+    <button type="submit" class="btn btn-primary btn-block mb-4">Вход</button>
 
 </form>
 
