--- a/VetchinovaTeplyakova/Pages/Shared/_Layout.cshtml
+++ b/VetchinovaTeplyakova/Pages/Shared/_Layout.cshtml
@@ -22,8 +22,21 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item">
+                        <li>
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            @{
+                                if (ViewData["Login"] == null)
+                                {
+                                    <a class="nav-link text-dark" asp-area="" asp-page="/Auth">Вход</a>
+                                }
+                                else
+                                {
+                                    <a class="nav-link text-dark" asp-area="" asp-page="/Logout">Выход</a>
+                                }
+                            }
+                            
                         </li>
                     </ul>
                 </div>
